--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -18,9 +18,9 @@
   "eat-kano": "吃掉小鹿乃",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
+  "game-title": "吃掉睿睿",
   "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "game-intro2": "人物肖像使用已经本人许可",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
