--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -30,20 +30,20 @@
   "again": "重来",
   "home": "主页",
   "rank": "排行",
-  "repo": "仓库",
+  "repo": "灵感来源",
   "text-level-1": "试着好好练一下?",
   "text-level-2": "TCL",
   "text-level-3": "TQL",
   "text-level-4": "您",
   "text-level-5": "人?",
   "time-over": "倒计时多了",
-  "rank-title": "吃掉小鹿乃-排行榜",
+  "rank-title": "吃掉睿睿-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉小鹿乃-排行榜",
+  "navbar-brand": "吃掉睿睿-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
